--- a/VpTopLinkage/app/src/main/res/layout/layout_scaleviewpager.xml
+++ b/VpTopLinkage/app/src/main/res/layout/layout_scaleviewpager.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="52dp">
 
-    <androidx.viewpager.widget.ViewPager
+    <com.example.vplinkage.widget.NoScrollViewPager
         android:id="@+id/scale_viewpager"
         android:layout_width="180dp"
         android:layout_height="52dp"
@@ -16,6 +16,7 @@
         android:id="@+id/scale_more_point"
         android:layout_width="5dp"
         android:layout_height="5dp"
+        android:alpha="0"
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/scale_viewpager"
