--- a/VpTopLinkage/app/src/main/res/layout/activity_magic.xml
+++ b/VpTopLinkage/app/src/main/res/layout/activity_magic.xml
@@ -23,6 +23,10 @@
             android:layout_toRightOf="@id/magicindicator"
             android:alpha="0"
             android:background="@drawable/shape_vpmore" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/remove"/>
     </RelativeLayout>
 
     <androidx.viewpager.widget.ViewPager
